--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
-<html>
-    <head>
-        <title>Origami</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <iframe width="700" height="620" style="border: 0px" src="https://en.wikipedia.org/wiki/Origami">
-        
-        </iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
 
-        <h1>Crane</h1>
-        <a href="https://www.thesprucecrafts.com/traditional-origami-crane-2540790" target="_blank">
-         <img src="crane.jpg" width ="368" height="276"></a>
+<div class="container">
 
-        <h1>Tulip Flower</h1>
-        <a href="https://www.thesprucecrafts.com/origami-tulip-flower-and-stem-4081189" target="_blank">
-        <img src="tulip_flower.jpg" width ="368" height="276"></a>
+    <section id="app">
+        <h1>Apps</h1>
+        <div class="line"></div>
+        <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/AmAIOlod-80aGvVFcBdbfjebPGUlVaYjI8ECZcJtZks/embed"></iframe>
+        <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/U9AQsuLnTixFr5caYUBM9qmkuaPCvmuWblFMcUPrC14/embed"></iframe>
+    </section>
 
-        <h1>Envelope</h1>
-        <a href="https://www.thesprucecrafts.com/make-an-easy-origami-envelope-4094705" target="_blank">
-        <img src="envelop.jpg" width ="368" height="276"></a>
+<h2>Click On The Games To Explore</h2>
 
-        <h1>Modular Box</h1>
-        <a href="https://www.thesprucecrafts.com/modular-origami-cube-box-4082281" target="_blank">
-        <img src="modular_box.jpg" width ="368" height="276"></a>
-    </body>
+<h5>This games are bulid in game lab, click on the game to play</h5>
+
+<!--
+Start your code from here
+-->
+<a href = "https://studio.code.org/projects/playlab/Xoq31TZJRl0W9K95JthlADu6tbI1xGTsVHpOvYsNtuE" target="_blank"><img src="game3.png"></a>
+<a href = "https://studio.code.org/projects/playlab/ZSXYWeXTB7loJFGuWFBTTvvsSKPUbbvWp9qrUH7MKhI" target="_blank"><img src="game4.png"></a>
+<a class="right carousel-control" href="#myCarousel" data-slide="next">
+  <span class="glyphicon gylphicon-chevron-right"></span>
+</a>
+</div>
+
+</body>
 </html>
